modificacion de pagina para proyecto

--- a/index.html
+++ b/index.html
@@ -6,11 +6,73 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CREPAS EIFEL</h1>
-    <P>Prueba de pagina web</P>
-    <h3>Este es un ejemplo de una página web</h3>
-    <footer>
-        <p>Copyright &copy; 2025 CREPAS EIFEL</p>
-    </footer>
+   <div class="container">
+    <h1> Crepas Eiffel</h1>
+    <p>Crepas Eiffel dedicados a dar una buena experiencia.
+Café de especialidad, calidad y variedad de sabores.
+Crepas dulces y saladas, frappes, malteadas, capuccinos, soda italiana y más....</p>
+
+    <section>
+        <h2>Elementos del Negocio</h2>
+        <h3>El Rey de la Crepa</h3>
+        <h4>Especialidad de la Casa</h4>
+        <p>Esta receta de crepa dulce de galleta Oreo combina una masa suave y delgada con un relleno cremoso e intenso a galleta Oreo, creando un postre irresistible y visualmente atractivo. Se caracteriza por un contraste entre el color negro de la crepa y la crema blanca, resultando en un sabor intenso a chocolate y vainilla. </p>
+    </section>
+
+    <hr>
+
+    <section>
+        <h2>Enlaces de Pedido</h2>
+        <p>Aquí está nuestro sitio web usando un enlace:</p>
+        <div class="enlace-seccion">
+            <div>
+                Visita nuestro menú digital usando este <a href="#">enlace directo</a>
+            </div>
+            <div style="text-align: center;">
+                <div class="img-rep">🥞</div>
+                <small>Imagen Representativa</small>
+            </div>
+        </div>
+    </section>
+
+    <hr>
+
+    <section>
+        <h2>Ingredientes Disponibles</h2>
+        <ul>
+            <li>Primer elemento: Harina de trigo sarraceno</li>
+            <li>Segundo elemento: Frutos rojos frescos</li>
+            <li>Paso uno: Esparcir la masa uniformemente</li>
+            <li>Paso tres: Doblar en triángulo y servir</li>
+        </ul>
+    </section>
+
+    <hr>
+
+    <section>
+        <h2>Formulario de Pedido</h2>
+        <div class="form-box">
+            <form>
+                <div class="campo">
+                    <label>Nombre del Cliente:</label>
+                </div>
+                <div class="campo">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" placeholder="Tu nombre aquí">
+                </div>
+                <div class="campo">
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" placeholder="crepa@ejemplo.com">
+                </div>
+                <div class="campo">
+                    <label>Enviar Pedido:</label>
+                    <input type="submit" value="Enviar Pedido">
+                </div>
+            </form>
+        </div>
+    </section>
+</div>
+
+
 </body>
 </html>
